Mon Nov 15 11:30:42 CET 1999 Olof S Kylander <olof@gimp.org>
	
	* app/xinput_airbrush.c

	A bit better std values for people w/o patch_xinput_airbrush

Mon Nov 15 02:09:30 CET 1999  Marc Lehmann <pcg@goof.com>

	* plug-ins/common/plugin-defs.pl, plug-ins/common/Makefile.am,
        plug-ins/common/colortoalpha.c: add Color To Alpha plug-in by Seth
        that is on my disk since ages....

        * app/fileops.c: preset the filename on "Save as".

Sun Nov 14 23:47:10 MET 1999  Sven Neumann <sven.gimp.org>

	* app/ink.c: plugged a memleak

	* app/xinput_airbrush.c; make it compile w/o patch_xinput_airbrush

Sun Nov 14 22:50:32 MET 1999  Sven Neumann <sven.gimp.org>
	
	* libgimp/gimpui.h: include all header files that belong to 
	libgimpui
	
	* plug-ins/common/compose.c
	* plug-ins/common/grid.c
	* plug-ins/common/tiff.c
	* plug-ins/flame/flame.c
	* plug-ins/flame/libifs.c
	* plug-ins/gdyntext/charmap.c
	* plug-ins/gdyntext/charmap_window.c
	* plug-ins/gdyntext/font_selection.c
	* plug-ins/gdyntext/message_window.c
	* plug-ins/imagemap/imap_preferences.c
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/sel2path/math.c: out of libgimp only include gimp.h, 
	gimpui.h and stdplugins-intl.h 

Sun Nov 14 21:37:51 CET 1999 Olof S Kylander <olof@gimp.org>
	
	Update of the Xinput airbrush, fixed some bugs.
	It's a bit closer to a real tool now ;-).

	Test it out but be aware that you have to have at least
	a tablet with tilt support. Preferibly you should have 
	a Wacom Airbrush and a patched version of GTK.

	Well it still has preformance problems with big brushes 
	i.e big  virtual height and big tilt.

	All sensitives are not yet implemented, but it starts
	to work like a real airbrush. It's as hard to 
	master as the real thing (beside that your ink will
	not streem).

	PS: There is a lot of printf and experimental code 
	in the tool at the moment please don't remove it.

 	* app/airbrush_blob.c
 	* app/airbrush_blob.h
 	* app/xinput_airbrush.c

